[package]
name = "rxmtty"
version = "0.1.0"
edition = "2026"
license = "Apache 2.0"
description = "RX-M browser terminal bridge implemented in Rust"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
